--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,8 +22,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "/owenhuang.github.io" # the subpath of your site, e.g. /blog
 url: "https://h6kplus.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: owenhuang17s
+github_username:  h6kplus
 
 # Build settings
 markdown: kramdown
