--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -27,8 +27,8 @@ github_username:  h6kplus
 
 # Build settings
 markdown: kramdown
-# theme: minima
-theme: academic
+theme: minima
+# theme: academic
 plugins:
   - jekyll-feed
 
