--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,6 @@
 # Site Settings
-baseurl: "/Grape-Academic-Theme"
+baseurl: "/owenhuang.github.io" # the subpath of your site, e.g. /blog
+url: "https://h6kplus.github.io/" # the base hostname & protocol for your site, 
 
 # Features Setting
 # Turn subpages on or off
