--- a/_config.yml
+++ b/_config.yml
@@ -13,28 +13,28 @@ lang: en
 
 # Search engine optimization settings
 title: Yidong Huang
-tagline: A jekyll theme for academic portfolios
-description: The demonstration page for the Grape Academic Theme, a jekyll theme for academic portfolios based on the Grape Theme.
-author: Christoph Jabs (chrjabs)
+tagline: 
+description: 
+author: Yidong Huang
 twitter:
-  username: chrjabs
-  card: A jekyll theme for academic portfolios
-logo: /assets/img/smile.png
+  username: owenhunag117
+  card: 
+logo: /assets/img/avatar.jpg
 social:
-  name: Christoph Jabs
+  name: Yidong Huang
   links:
-    - https://twitter.com/chrjabs
-    - https://github.com/chrjabs
+    - https://twitter.com/owenhuang117
+    - https://github.com/h6kplus
 locale: en_GB
 
 # Page Settings
 theme_settings:
   title: Grape Academic Theme
 
-  experience_title: EXPERIENCE
-  interests_title: RESEARCH INTERESTS
+  experience_title: EDUCATION
+  interests_title: RESEARCH EXPERIENCE
   skills_title: SKILLS
-  awards_title: AWARDS
+  awards_title: RESEARCH INTERESTS
   projects_title: PROJECTS
   recentpubs_title: RECENT PUBLICATIONS
 
