--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,10 +1,10 @@
-# - project :
-#     print: True # If 'False' is selected, it will not be displayed in 'home.html > aside > .proj-content'. 
-#     modal: True # If 'True' is selected, modal can open in 'portfolio.html'. 
-#     url: https://github.com/chrjabs/Grape-Academic-Theme # Full URL
-#     image:
-#       path: "portfolio.png" # path: assets/project/
-#       alt: "A screenshot of the portfolio page"
+- project :
+    print: True # If 'False' is selected, it will not be displayed in 'home.html > aside > .proj-content'. 
+    modal: True # If 'True' is selected, modal can open in 'portfolio.html'. 
+    url: https://arxiv.org/abs/2210.12511e # Full URL
+    image:
+      path: "portfolio.png" # path: assets/project/
+      alt: "A screenshot of the portfolio page"
 #     date: 05/2022 &ndash; Developing
 #     title: Grape-Theme
 #     summary: Academic portfolio jekyll theme.
