add single project

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,12 +3,12 @@
     modal: True # If 'True' is selected, modal can open in 'portfolio.html'. 
     url: https://arxiv.org/abs/2210.12511e # Full URL
     image:
-      path: "portfolio.png" # path: assets/project/
+      path: "dorothie.png" # path: assets/project/
       alt: "A screenshot of the portfolio page"
-#     date: 05/2022 &ndash; Developing
-#     title: Grape-Theme
-#     summary: Academic portfolio jekyll theme.
-#     description: A modification of the Grape-Theme for jekyll to be useable as an academic portfolio.
+    date: 02/2022 &ndash; 06/2022
+    title: DOROTHIE, Spoken Dialogue for Handling Unexpected Situations in Interactive Autonomous Driving Agents
+    # summary: Academic portfolio jekyll theme.
+    # description: A modification of the Grape-Theme for jekyll to be useable as an academic portfolio.
 #     contents:
 #         - title: 1. Portfolio Page
 #           image:
