--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,7 +1,7 @@
 - project :
     print: True # If 'False' is selected, it will not be displayed in 'home.html > aside > .proj-content'. 
     modal: True # If 'True' is selected, modal can open in 'portfolio.html'. 
-    url: https://arxiv.org/abs/2210.12511e # Full URL
+    url: https://arxiv.org/abs/2210.12511 # Full URL
     image:
       path: "dorothie.png" # path: assets/project/
       alt: "A screenshot of the portfolio page"
