--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -4,11 +4,11 @@
     url: https://arxiv.org/abs/2210.12511 # Full URL
     image:
       path: "dorothie.png" # path: assets/project/
-      alt: "A screenshot of the portfolio page"
+      alt: "The Double Wizard Setup"
     date: 02/2022 &ndash; 06/2022
     title: DOROTHIE, Spoken Dialogue for Handling Unexpected Situations in Interactive Autonomous Driving Agents
-    # summary: Academic portfolio jekyll theme.
-    # description: A modification of the Grape-Theme for jekyll to be useable as an academic portfolio.
+    summary: Admitted to findings of EMNLP 2022
+    description: we tackled the limitations of vision-language navigation tasks, where most existing approaches were limited in their ability to navigate in a continuous and dynamic environment and communicate with humans in free-form. To address these limitations and collect data, we extended the traditional Wizard of Oz study and proposed the duo-wizard setup. This allowed us to add dynamic changes in the environment and tasks to the simulation, which provided a more realistic testbed for evaluating an agent's ability to communicate and navigate.
 #     contents:
 #         - title: 1. Portfolio Page
 #           image:
@@ -31,12 +31,14 @@
 #           description: <li>Responsive Layout</li> 
 #             <li>Tags</li> 
 
-# - project:
-#     print: True # If 'False' is selected, it will not be displayed in 'home.html > aside > .proj-content'. 
-#     modal: True # If 'True' is selected, modal can open in 'portfolio.html'. 
-#     url:  # Full URL
-#     image: # path: assets/project/
-#     date: 06/2019 &ndash; Developing
-#     title: Dummy project
-#     summary: This is a Dummy
-#     description:  
+- project:
+    print: True # If 'False' is selected, it will not be displayed in 'home.html > aside > .proj-content'. 
+    modal: True # If 'True' is selected, modal can open in 'portfolio.html'. 
+    url:  https://arxiv.org/abs/2112.10046 # Full URL
+    image:
+      path: "aesrgan.png" # path: assets/project/
+      alt: 
+    date: 11/2021 &ndash; 12/2021
+    title: A-ESRGAN, Training Real-World Blind Super-Resolution with Attention U-Net Discriminators
+    summary: This is a Dummy
+    description:  
