--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site Settings
-baseurl: "/h6kplus.github.io" # the subpath of your site, e.g. /blog
+baseurl: "/owenhuang.github.io" # the subpath of your site, e.g. /blog
 url: "https://h6kplus.github.io" # the base hostname & protocol for your site, 
 
 # Features Setting
